--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
         <span class="brand-name">Neural Net Neutrality</span>
       </div>
       <nav class="nav">
-        <a href="#features">Features</a>
-        <a href="#how">How it works</a>
-        <a href="#docs">Docs</a>
+        <a href="./battle.html"> Battle!</a>
+        <a href="./how">How it works</a>
+        <a href="./ratings.html">Leaderboard</a>
       </nav>
     </div>
   </header>
