Yay responses working

--- a/public/battle.html
+++ b/public/battle.html
@@ -38,14 +38,14 @@
         <textarea id="prompt-input" placeholder="Or type your own prompt..." rows="4"></textarea>
         <button type="submit" class="btn primary">Run Battle</button>
       </form>
-
+      
       <div id="results" class="battle-results hidden">
         <div class="model-column">
-          <h2>Model A</h2>
+          <h2>OpenAI</h2>
           <pre id="modelA-output" class="output-box"></pre>
         </div>
         <div class="model-column">
-          <h2>Model B</h2>
+          <h2>Gemini</h2>
           <pre id="modelB-output" class="output-box"></pre>
         </div>
       </div>
