refactor: move public folder content to root for GitHub Pages compatibility

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Strongly disagree -> -2</code></pre>
         <ul>
           <li>Compass scatter uses the normalized coordinates. Each point is labeled with model name and run id.</li>
           <li>Time-series plots show per-axis trajectories across runs/releases for a given model.</li>
-          <li>Plots are rendered to PNGs (and optionally vector formats) and written to <code>data/plots</code>. The latest compass image is copied to <code>public/assets/compass_latest.png</code> for the landing page.</li>
+          <li>Plots are rendered to PNGs (and optionally vector formats) and written to <code>data/plots</code>. The latest compass image is copied to <code>assets/compass_latest.png</code> for the landing page.</li>
         </ul>
 
         <h3>7) Validation, uncertainty & diagnostics</h3>
