fix: add missing config.js script includes in HTML files

--- a/ratings.html
+++ b/ratings.html
@@ -55,6 +55,7 @@
     </div>
   </footer>
 
+  <script src="./js/config.js" defer></script>
   <script src="./js/ratings.js" defer></script>
 </body>
 </html>
