--- a/battle.html
+++ b/battle.html
@@ -58,6 +58,7 @@
     </div>
   </footer>
 
+  <script src="./js/config.js" defer></script>
   <script src="./js/battle.js" defer></script>
 </body>
 </html>
