feat: add voting system with Elo rating updates

--- a/battle.html
+++ b/battle.html
@@ -43,10 +43,12 @@
         <div class="model-column">
           <h2>OpenAI</h2>
           <pre id="modelA-output" class="output-box"></pre>
+          <button id="vote-a" class="btn vote-btn">Vote: Fairer Response</button>
         </div>
         <div class="model-column">
           <h2>Gemini</h2>
           <pre id="modelB-output" class="output-box"></pre>
+          <button id="vote-b" class="btn vote-btn">Vote: Fairer Response</button>
         </div>
       </div>
     </section>
