--- a/ratings.html
+++ b/ratings.html
@@ -36,10 +36,10 @@
         <thead>
           <tr>
             <th>Model</th>
-            <th>1v1</th>
-            <th>2v2</th>
-            <th>5v5</th>
-            <th class="sortable" data-sort="elo">Elo (Overall) ↓</th>
+            <th>Elo Rating</th>
+            <th>Wins</th>
+            <th>Losses</th>
+            <th>Win Rate</th>
           </tr>
         </thead>
         <tbody>
