--- a/battle.html
+++ b/battle.html
@@ -32,35 +32,6 @@
       <h1 class="battle-title">Prompt Battle!</h1>
       <p class="battle-subtitle">Select a question below or write your own prompt.</p>
 
-      <!-- Model Selection -->
-      <div class="model-selection">
-        <div class="model-select-group">
-          <label for="model-a-select">Model A:</label>
-          <select id="model-a-select" class="model-select">
-            <option value="gpt-4o-mini">OpenAI GPT-4o Mini</option>
-            <option value="gpt-4o">OpenAI GPT-4o</option>
-            <option value="gpt-3.5-turbo">OpenAI GPT-3.5 Turbo</option>
-            <option value="claude-3-haiku-20240307">Claude 3 Haiku</option>
-            <option value="claude-3-sonnet-20240229">Claude 3 Sonnet</option>
-            <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
-            <option value="gemini-2.0-flash">Gemini 2.0 Flash</option>
-          </select>
-        </div>
-        <div class="vs-divider">VS</div>
-        <div class="model-select-group">
-          <label for="model-b-select">Model B:</label>
-          <select id="model-b-select" class="model-select">
-            <option value="gpt-4o-mini">OpenAI GPT-4o Mini</option>
-            <option value="gpt-4o">OpenAI GPT-4o</option>
-            <option value="gpt-3.5-turbo">OpenAI GPT-3.5 Turbo</option>
-            <option value="claude-3-haiku-20240307">Claude 3 Haiku</option>
-            <option value="claude-3-sonnet-20240229">Claude 3 Sonnet</option>
-            <option value="gemini-1.5-pro">Gemini 1.5 Pro</option>
-            <option value="gemini-2.0-flash" selected>Gemini 2.0 Flash</option>
-          </select>
-        </div>
-      </div>
-
       <div id="question-grid" class="question-grid"></div>
 
       <form id="battle-form" class="battle-form">
@@ -70,12 +41,12 @@
       
       <div id="results" class="battle-results hidden">
         <div class="model-column">
-          <h2 id="model-a-label">OpenAI</h2>
+          <h2>OpenAI</h2>
           <pre id="modelA-output" class="output-box"></pre>
           <button id="vote-a" class="btn vote-btn">Vote: Fairer Response</button>
         </div>
         <div class="model-column">
-          <h2 id="model-b-label">Gemini</h2>
+          <h2>Gemini</h2>
           <pre id="modelB-output" class="output-box"></pre>
           <button id="vote-b" class="btn vote-btn">Vote: Fairer Response</button>
         </div>
