let's see if debate works

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <span class="brand-name">Neural Net Neutrality</span>
       </div>
       <nav class="nav">
-        <a href="./battle.html"> Battle!</a>
+        <a href="./battle.html">Battle!</a>
+        <a href="./debate.html">Debate!</a>
         <a href="./ratings.html">Leaderboard</a>
       </nav>
     </div>
