--- a/ratings.html
+++ b/ratings.html
@@ -22,6 +22,7 @@
       <nav class="nav">
         <a href="./index.html">Home</a>
         <a href="./battle.html">Battle!</a>
+        <a href="./debate.html">Debate!</a>
         <a href="./ratings.html" class="active">Ratings</a>
       </nav>
     </div>
