--- a/battle.html
+++ b/battle.html
@@ -22,6 +22,7 @@
       <nav class="nav">
         <a href="./index.html">Home</a>
         <a href="./battle.html" class="active">Battle!</a>
+        <a href="./debate.html">Debate!</a>
         <a href="./ratings.html">Ratings</a>
       </nav>
     </div>
