Feat: Add tag modal to battle/debate, create tag analytics dashboard
- Add tag modal UI to battle.html and debate.html (same as debate)
- Update battle.js to show tag modal on vote (like debate.js)
- Add modal CSS styles to battle.css for tag selection UI
- Create tag-analytics.html page with dimension breakdowns
- Create tag-analytics.js with interactive analytics charts
- Create tag-analytics.css with responsive dimension cards and comparison view
- Add Tag Analytics link to all page navigations
- Tag system now fully integrated across battle, debate, and analytics

Users can now:
1. Vote on battles/debates with rich tags explaining why
2. View dimension scores (empathy, aggressiveness, evidence, political)
3. See leaderboards for each model by dimension
4. Compare models side-by-side
5. View tag frequency statistics

--- a/debate.html
+++ b/debate.html
@@ -24,6 +24,7 @@
         <a href="./battle.html">Battle!</a>
         <a href="./debate.html" class="active">Debate!</a>
         <a href="./ratings.html">Ratings</a>
+        <a href="./tag-analytics.html">Tag Analytics</a>
       </nav>
     </div>
   </header>
