--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="./battle.html">Battle!</a>
         <a href="./debate.html">Debate!</a>
         <a href="./ratings.html">Leaderboard</a>
+        <a href="./tag-analytics.html">Tag Analytics</a>
       </nav>
     </div>
   </header>
