--- a/ratings.html
+++ b/ratings.html
@@ -24,6 +24,7 @@
         <a href="./battle.html">Battle!</a>
         <a href="./debate.html">Debate!</a>
         <a href="./ratings.html" class="active">Ratings</a>
+        <a href="./tag-analytics.html">Tag Analytics</a>
       </nav>
     </div>
   </header>
