--- a/ratings.html
+++ b/ratings.html
@@ -20,12 +20,12 @@
         <span class="brand-name">Neural Net Neutrality</span>
       </div>
       <nav class="nav">
-        <a href="./index.html">Home</a>
-        <a href="./battle.html">Battle!</a>
-        <a href="./debate.html">Debate!</a>
-        <a href="./ratings.html" class="active">Ratings</a>
-        <a href="./podcast-v2.html">Podcast</a>
-        <a href="./tag-analytics.html">Tag Analytics</a>
+        <a href="./index.html">🏠Home</a>
+        <a href="./battle.html">🥊Battle!</a>
+        <a href="./debate.html">🗯️Debate!</a>
+        <a href="./ratings.html" class="active">🥇Leaderboard</a>
+        <a href="./podcast.html">📻Podcast</a>
+        <a href="./tag-analytics.html">📊Tag Analytics</a>
       </nav>
     </div>
   </header>
