--- a/tag-analytics.html
+++ b/tag-analytics.html
@@ -20,11 +20,12 @@
         <span class="brand-name">Neural Net Neutrality</span>
       </div>
       <nav class="nav">
-        <a href="./index.html">Home</a>
-        <a href="./battle.html">Battle!</a>
-        <a href="./debate.html">Debate!</a>
-        <a href="./ratings.html">Ratings</a>
-        <a href="./tag-analytics.html" class="active">Tag Analytics</a>
+        <a href="./index.html">🏠Home</a>
+        <a href="./battle.html">🥊Battle!</a>
+        <a href="./debate.html">🗯️Debate!</a>
+        <a href="./ratings.html">🥇Leaderboard</a>
+        <a href="./podcast.html">📻Podcast</a>
+        <a href="./tag-analytics.html" class="active">📊Tag Analytics</a>
       </nav>
     </div>
   </header>
