Integrate podcast functionality from neural-net-neutrality-BE
- Add /api/generate-podcast endpoint for generating podcast scripts from articles
- Add /api/podcasts endpoint to list podcast episodes
- Add /api/podcasts/latest endpoint for today's episode
- Create podcast_service.py module with reusable podcast logic
- Add sample articles and episodes for testing
- Update navigation to include Podcast link on all pages
- Create PODCAST_INTEGRATION.md with full implementation guide
- Create PODCAST_QUICK_START.md with testing instructions
- Frontend already has complete Spotify-style player UI ready to use
- All endpoints functional with mock data, ready for real articles and TTS

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <a href="./debate.html">Debate!</a>
         <a href="./ratings.html">Leaderboard</a>
         <a href="./tag-analytics.html">Tag Analytics</a>
+        <a href="./podcast-v2.html">Podcast</a>
       </nav>
     </div>
   </header>
