--- a/podcast-v2.html
+++ b/podcast-v2.html
@@ -22,7 +22,9 @@
       <nav class="nav">
         <a href="./index.html">Home</a>
         <a href="./battle.html">Battle!</a>
+        <a href="./debate.html">Debate!</a>
         <a href="./ratings.html">Ratings</a>
+        <a href="./tag-analytics.html">Tag Analytics</a>
         <a href="./podcast-v2.html" class="active">Podcast</a>
       </nav>
     </div>
