Add missing error state HTML to debate page
- Added error-state div with error-message and retry-btn
- Fixes TypeError: Cannot read properties of null
- debate.js now has all required DOM elements

--- a/debate.html
+++ b/debate.html
@@ -81,6 +81,15 @@
         <p>Debaters are preparing their arguments...</p>
       </div>
 
+      <!-- Error State -->
+      <div id="error-state" class="error-state hidden">
+        <div class="error-content">
+          <h2>Oops! Something went wrong</h2>
+          <p id="error-message"></p>
+          <button id="retry-btn" class="btn primary">Try Again</button>
+        </div>
+      </div>
+
       <!-- Debate Results -->
       <div id="debate-results" class="debate-results hidden">
         <div class="debate-topic-display">
