Standardize navbar across all pages with emojis
- Updated battle.html, debate.html, ratings.html, podcast-v2.html, tag-analytics.html
- All pages now use consistent emoji navbar from index.html

--- a/podcast-v2.html
+++ b/podcast-v2.html
@@ -20,12 +20,12 @@
         <span class="brand-name">Neural Net Neutrality</span>
       </div>
       <nav class="nav">
-        <a href="./index.html">Home</a>
-        <a href="./battle.html">Battle!</a>
-        <a href="./debate.html">Debate!</a>
-        <a href="./ratings.html">Ratings</a>
-        <a href="./tag-analytics.html">Tag Analytics</a>
-        <a href="./podcast-v2.html" class="active">Podcast</a>
+        <a href="./index.html">🏠Home</a>
+        <a href="./battle.html">🥊Battle!</a>
+        <a href="./debate.html">🗯️Debate!</a>
+        <a href="./ratings.html">🥇Leaderboard</a>
+        <a href="./podcast-v2.html">📻Podcast</a>
+        <a href="./tag-analytics.html">📊Tag Analytics</a>
       </nav>
     </div>
   </header>
